# fintel

./: .env.example  .gitignore  DESIGN_COMPONENTS.md  DESIGN_DECISIONS.md  DESIGN_INDEX.md  DESIGN_PATTERNS_ANALYSIS.md  DESIGN_QUICK_START.md  HANDOFF.md  PLAN-scoring.md  PLAN.md  README.md  RESEARCH_SUMMARY.md  SPEC-scoring.md  SPEC.md  __init__.py  __main__.py  cli.py  fintel.example.toml  pyproject.toml  requirements.txt
adapters/: FINVIZ_README.md  __init__.py  base.py  cache.py  calendar.py  capitol_trades_scraper.py  congress.py  finnhub.py  finviz.py  fred.py  reddit.py  rss.py  sec.py  sec_13f.py  universe.py  yahoo.py
config/: __init__.py  loader.py  schema.py  scoring.toml  settings.py
db/: __init__.py  database.py  models.py
docs/: IMPROVEMENTS.md
domain/: __init__.py  algorithm_backtest.py  algorithm_signals.py  analysis.py  analysis_types.py  backtest.py  backtest_enhanced.py  briefing.py  enums.py  models.py  news.py  primitives.py  regime.py  risk.py  score_aggregator.py  scoring.py  scoring_bridge.py  smart_money.py
examples/: config_validation.py  finviz_news_demo.py  sec_8k_example.py
frontend/: astro.config.mjs  package-lock.json  package.json  server.mjs
orchestration/: __init__.py  news_aggregator.py  pipeline.py
ports/: __init__.py  sources.py
presentation/: __init__.py  export.py  frontend_export.py  json_api.py  report.py
scripts/: generate_frontend_data.py  health_check.py  refresh_data.sh  refresh_prices.py  run_backtest_simulation.py  update_13f.py  update_performance.py
services/: __init__.py  alerts.py
(+109 files in other folders)
