[project]
name = "fintel"
version = "0.1.0"
description = "Financial Intelligence System"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
fintel = "fintel.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
